got mongodb set up

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <body>
   <h1>Shred the Pow</h1>
   <root id="root"></root>
-  <script src="./build/bundle.js"></script>
+  <!-- <script src="./build/bundle.js"></script> -->
 </body>
