--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <title>Pow</title>
+  <title>Pow.js</title>
 </head>
 <body>
-  <h1>Shred the Pow</h1>
+  <h1>Pow.js</h1>
   <root id="root"></root>
   <!-- <script src="./build/bundle.js"></script> -->
 </body>
